<resources>
    <string name="app_name">NyayaSetu</string>
    <string name="document_writer">Document Writer</string>
    <string name="lawyer">Lawyer</string>
    <string name="notary">Notary</string>
    <string name="choose_your_profession">Choose Your Profession</string>
    <string name="next">Next</string>
    <string name="personal_details">Personal Details</string>
    <string name="name">Name</string>
    <string name="enter">Enter</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="enter_aadhar">Enter Aadhar</string>
    <string name="gender">Gender</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="write_a_short_summary_about_you">Write a short summary about you</string>
    <string name="select_jurisdiction">Select Jurisdiction</string>
    <string name="area_of_jurisdiction">Area of Jurisdiction</string>
    <string name="select_date">Select Date</string>
    <string name="commission_expiry_date">Commission Expiry Date</string>
    <string name="notary_commission_number">Notary Commission Number</string>
    <string name="commission_number">Commission Number</string>
    <string name="upload">Upload</string>
    <string name="document_pdf">document.pdf</string>
    <string name="upload_document">Upload Document</string>
    <string name="availability">Availability</string>
    <string name="enter_experience">Enter Experience</string>
    <string name="years_of_experience">Years of Experience</string>
    <string name="enter_bar_reg_no">Enter Bar Reg No</string>
    <string name="bar_association_reg_number">Bar Association Reg Number</string>
    <string name="work_details">Work Details</string>
    <string name="summary">Summary</string>
    <string name="enter_basic_fee">Enter basic fee</string>
    <string name="costing">Costing</string>
    <string name="choose_your_language">Choose Your Language</string>
    <string name="enter_location">Enter Location</string>
    <string name="location_of_service">Area of Service</string>
    <string name="other_details">Other Details</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet">Not Registered Yet , <b>Sign Up!</b></string>
    <string name="sign_up">Sign Up</string>
    <string name="type_your_name">Type your Username</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="are_you_a_legal_service_provider">Are you a legal service provider?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="already_registered_sign_in">Already Registered , <b>Sign In !</b></string>
    <string name="available_lawyers">Available Lawyers</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="bankruptcy_lawyer">Bankruptcy Lawyer</string>
    <string name="corporate_lawyer">Corporate Lawyer</string>
    <string name="constitutional_lawyer">Constitutional Lawyer</string>
    <string name="criminal_defense_lawyer">Criminal Defense Lawyer</string>
    <string name="employment_and_labour_lawyer">Employment and Labour Lawyer</string>
    <string name="entertainment_lawyer">Entertainment Lawyer</string>
    <string name="estate_planning_lawyer">Estate Planning Lawyer</string>
    <string name="family_lawyer">Family Lawyer</string>
    <string name="immigration_lawyer">Immigration Lawyer</string>
    <string name="intellectual_property_lawyer">Intellectual Property Lawyer</string>
    <string name="personal_injury_lawyer">Personal Injury Lawyer</string>
    <string name="tax_lawyer">Tax Lawyer</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="welcome_sign_in_to_continue"><b>Welcome</b>, Sign in to continue!</string>
    <string name="create_a_new_account">Create a new account</string>


    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>male</item>
        <item>female</item>
        <item>other</item>=
    </string-array>

    <string-array name="availability_array">
        <item>Select Availability</item>
        <item>Part-time</item>
        <item>Full-time</item>
    </string-array>

    <string-array name="availability_array_alt">
        <item>Select Availability</item>
        <item>part-time</item>
        <item>full-time</item>
    </string-array>

    <string-array name="indian_languages_array">
        <item>Select Language</item>
        <item>Hindi</item>
        <item>English</item>
        <item>Bengali</item>
        <item>Telugu</item>
        <item>Marathi</item>
        <item>Tamil</item>
        <item>Urdu</item>
        <item>Kannada</item>
        <item>Gujarati</item>
        <item>Odia</item>
        <item>Punjabi</item>
        <item>Malayalam</item>
        <item>Assamese</item>
        <item>Bhojpuri</item>
    </string-array>

    <string-array name="lawyer_category">
        <item>bankruptcy</item>
        <item>business</item>
        <item>constitutional</item>
        <item>criminal defense</item>
        <item>employment and labour</item>
        <item>entertainment</item>
        <item>estate planning</item>
        <item>family</item>
        <item>immigration</item>
        <item>intellectual property</item>
        <item>personal injury</item>
        <item>tax</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="category">Category</string>
    <string name="choose_category">Choose Category</string>
    <string name="city">City</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="basic_details">Basic Details</string>
    <string name="budget">Budget</string>
    <string name="enter_budget">Enter Budget</string>
    <string name="legal_needs">Legal Needs</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="enter_legal_needs">Enter Legal Needs</string>
    <string name="case_number_1431_divorce">Case Number: 1431: Divorce</string>
    <string name="lawyer_nappointment">Lawyer \nAppointment</string>
    <string name="notary_nappointment">Notary \nAppointment</string>
    <string name="document_nwriter">Document \nWriter</string>
    <string name="recommendation">Recommendation</string>
    <string name="ngo">Ngo</string>
    <string name="legal_assist">Legal Assist</string>
    <string name="legal_aid_clinic">Legal Aid Clinic</string>
    <string name="rewards">Rewards</string>
    <string name="consultancy">Consultancy</string>
    <string name="our_services">Our Services</string>

</resources>