<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lawyer.ui_onboarding.AddOtherDetailsFragment">

    <TextView
        android:id="@+id/textHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sofiaprosoftbold"
        android:text="@string/other_details"
        android:textSize="24sp"
        android:background="@color/white"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/textHolder"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/llLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiaprosoftmedium"
                    android:text="@string/location_of_service"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etlLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/enter_location">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLanguages"
                android:layout_width="match_parent"
                app:layout_goneMarginTop="24dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llLocation">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiaprosoftmedium"
                    android:text="@string/choose_your_language"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvLanguages"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="4dp"
                    app:strokeColor="@color/grey">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etlLanguages"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/choose_gender"
                        android:layout_marginStart="10dp"
                        >
                        <Spinner
                            android:id="@+id/languageSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llLanguages">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiaprosoftmedium"
                    android:text="@string/costing"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etlCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/enter_basic_fee">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llCost">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiaprosoftmedium"
                    android:text="@string/summary"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etlSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/write_a_short_summary_about_you">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSummary"
                        android:layout_width="match_parent"
                        android:gravity="top"
                        android:layout_height="150dp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_gradient_rounded"
        android:fontFamily="@font/sofiaprosoftmedium"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>