<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lawyer.ui_onboarding.AddWorkDetailsFragment">

    <TextView
        android:id="@+id/textHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sofiaprosoftbold"
        android:text="@string/basic_details"
        android:textSize="24sp"
        android:background="@color/white"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/textHolder"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/llBudget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiaprosoftmedium"
                    android:text="@string/enter_budget"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etlBudget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/budget">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etBudget"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llExperience"
                android:layout_width="match_parent"
                app:layout_goneMarginTop="24dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llBudget">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiaprosoftmedium"
                    android:text="@string/years_of_experience"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etlExperience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/enter_experience">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etExperience"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLegalNeeds"
                android:layout_width="match_parent"
                app:layout_goneMarginTop="24dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llExperience">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiaprosoftmedium"
                    android:text="@string/enter_legal_needs"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etlLegalNeeds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/legal_needs">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLegalNeeds"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAvailability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llLegalNeeds">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiaprosoftmedium"
                    android:text="@string/availability"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvAvailability"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="4dp"
                    app:strokeColor="@color/grey">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etlAvailability"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/choose_gender"
                        android:layout_marginStart="10dp"
                        >
                        <Spinner
                            android:id="@+id/availabilitySpinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_gradient_rounded"
        android:fontFamily="@font/sofiaprosoftmedium"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>